--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MariaDB ?? ??
-spring.datasource.url=jdbc:mariadb://localhost:3306/netflix  
-spring.datasource.username=mac
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mariadb://localhost:33061/netflix
+spring.datasource.username=root
+spring.datasource.password=qwer1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Hibernate ??
