login 기능 구현, JWT 중간 저장

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,11 @@ dependencies {
     //
     implementation 'javax.servlet:javax.servlet-api:4.0.1'  // Servlet API 추가
 
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.3' //jwt
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
+
 
 }
 
