--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ repositories {
     mavenCentral()
 }
 
+
+
 dependencies {
     // JPA (MariaDB 연동)
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -51,18 +53,24 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // 보안 관련 의존성
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Swagger (SpringFox 의 Swagger 설정)
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'  // Swagger 3.0.0 버전
+//    implementation 'io.springfox:springfox-boot-starter:3.0.0'  // Swagger 3.0.0 버전
 
-    // MongoDB 연동을 위한 의존성
-//    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'  // MongoDB Starter
-
+    // SpringDoc OpenAPI 의존성 추가 (Swagger)
+    implementation 'org.springdoc:springdoc-openapi-ui:2.1.0'
     //
     implementation 'javax.servlet:javax.servlet-api:4.0.1'  // Servlet API 추가
 
 
+}
+// 250319 GSHAM
+// Java 컴파일 시 메서드 파라미터 이름을 포함시키도록 설정하는 옵션입니다.
+// 이 옵션을 활성화하면 리플렉션을 통해 메서드의 파라미터 이름을 사용할 수 있게 됩니다.
+// 이를 통해 Spring에서 @PathVariable과 같은 어노테이션을 정상적으로 매핑할 수 있습니다.
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
 }
 
 
