250320 GSHAM Admin시점 영화등록 기능 구현

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // 보안 관련 의존성
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Swagger (SpringFox 의 Swagger 설정)
     implementation 'io.springfox:springfox-boot-starter:3.0.0'  // Swagger 3.0.0 버전
