--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MariaDB ?? ??
-spring.datasource.url=jdbc:mariadb://localhost:33061/netflix
-spring.datasource.username=root
-spring.datasource.password=qwer1234
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Hibernate ??
